force-app/main/default/objects/Foster_Note__c/Foster_Note__c.object-meta.xml
<CustomObject>
    <label>Foster Note</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Foster Notes Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foster Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>