force-app/main/default/objects/Foster_Note__c/fields/Foster_Notes__c.field-meta.xml
<CustomField>
    <fullName>Foster_Notes__c</fullName>
    <label>Foster Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>